@@ -1,5 +1,5 @@
-
-        package com.example.lms.service.rag;
+// src/main/java/com/example/lms/service/rag/EmbeddingModelCrossEncoderReranker.java
+package com.example.lms.service.rag;
 
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.data.segment.TextSegment;
@@ -12,117 +12,107 @@ import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 /**
- * 임베딩 모델과 코사인 유사도를 사용하여 후보군을 재정렬하는 Reranker 구현체.
- * CrossEncoderReranker 인터페이스의 주요 구현이며, {@code @Primary}를 통해 기본으로 활성화됩니다.
+ * 임베딩 기반 Cross-Encoder 스타일 리랭커(통합판).
+ * - 정책(원소 허용/비선호) + 주어 앵커 + 제너릭 문서 감점
+ * - 사용자 피드백(AdaptiveScoring) 기반 궁합 보너스
+ * - 배치 임베딩 + 시간 로깅
  */
 @Slf4j
-@Component
+@Component("embeddingModelCrossEncoderReranker") // ★ 이름 변경(충돌 회피)
 @Primary
 @RequiredArgsConstructor
 public class EmbeddingModelCrossEncoderReranker implements CrossEncoderReranker {
 
     private final EmbeddingModel embeddingModel;
-    private final com.example.lms.genshin.GenshinElementLexicon lexicon;                 // NEW
+    private final com.example.lms.genshin.GenshinElementLexicon lexicon;                 // fallback 정책 계산
+    private final com.example.lms.service.rag.rerank.ElementConstraintScorer elemScorer; // 정책 가중
+    private final com.example.lms.service.knowledge.KnowledgeBaseService knowledgeBase;  // 엔티티/정책/파트너 탐지
+    private final com.example.lms.service.rag.detector.GameDomainDetector domainDetector;// 도메인 감지
+    private final com.example.lms.service.scoring.AdaptiveScoringService adaptiveScorer; // 피드백 기반 보너스
 
-    private final com.example.lms.service.rag.rerank.ElementConstraintScorer elemScorer; // keep
-    private final com.example.lms.service.knowledge.KnowledgeBaseService knowledgeBase;  //  NEW
-    private final com.example.lms.service.rag.detector.GameDomainDetector domainDetector;//  NEW
-    private final com.example.lms.service.scoring.AdaptiveScoringService adaptiveScorer; //  NEW
-    // ⚠ GenericDocClassifier가 @Component가 아니라면, 유틸처럼 1회 생성하여 사용
+    // @Component 아닐 수 있으므로 내부 인스턴스 보유
     private final com.example.lms.service.rag.filter.GenericDocClassifier genericClassifier =
             new com.example.lms.service.rag.filter.GenericDocClassifier();
 
-    /**
-     * 후보 목록(candidates)을 쿼리(query)와의 관련도에 따라 재정렬하고 상위 N개를 반환합니다.
-     *
-     * @param query      사용자 쿼리
-     * @param candidates 재정렬할 후보 Content 목록
-     * @param topN       반환할 결과의 수
-     * @return 재정렬된 상위 N개의 Content 목록
-     */
     @Override
     public List<Content> rerank(String query, List<Content> candidates, int topN) {
         if (query == null || query.isBlank() || candidates == null || candidates.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         try {
-            // 쿼리 벡터는 한 번만 계산하여 효율성 확보
-            final float[] queryVector = embeddingModel.embed(TextSegment.from(query)).content().vector();
+            // 쿼리 임베딩
+            final float[] qv = embeddingModel.embed(TextSegment.from(query)).content().vector();
             final int n = candidates.size();
             final int k = Math.max(1, Math.min(topN, n));
 
-            // 정렬 과정에서 반복 호출을 피하기 위해 선계산
+            // Content → TextSegment 스냅샷
             final List<Content> snapshot = new ArrayList<>(candidates);
             final List<TextSegment> segments = snapshot.stream()
                     .map(c -> Optional.ofNullable(c.textSegment())
-                            .orElseGet(() -> TextSegment.from(Optional.ofNullable(c.toString()).orElse(""))))
+                            .orElseGet(() -> TextSegment.from(String.valueOf(c))))
                     .collect(Collectors.toList());
 
-            // 🔹 배치 임베딩: 네트워크 호출 1회
+            // 배치 임베딩 + 시간 로깅
             long t0 = System.nanoTime();
             Response<List<Embedding>> batch = embeddingModel.embedAll(segments);
             long tEmbedMs = (System.nanoTime() - t0) / 1_000_000L;
-            List<Embedding> docEmbeddings = (batch != null) ? batch.content() : null;
 
+            List<Embedding> docEmbeddings = (batch != null) ? batch.content() : null;
             if (docEmbeddings == null || docEmbeddings.size() != n) {
                 log.warn("embedAll() returned {} embeddings for {} candidates; fallback to original order.",
                         (docEmbeddings == null ? 0 : docEmbeddings.size()), n);
                 return new ArrayList<>(snapshot.subList(0, k));
             }
 
-            // 정책(원소 허용/비선호) 계산
-            var policy = lexicon.policyForQuery(query);  // fallback (KB 정책은 전처리에서 동일 주입)
+            // 정책/도메인/주어 계산
+            var policy = lexicon.policyForQuery(query); // KB 기반 정책은 전처리에서 주입되며, 여기선 보수적 fallback
             String domain = domainDetector.detect(query);
-            String subject = com.example.lms.service.subject.SubjectResolver.guessSubjectFromQueryStatic(
-                    knowledgeBase, domain, query); //  partner 추출에 사용
+            String subject = com.example.lms.service.subject.SubjectResolver
+                    .guessSubjectFromQueryStatic(knowledgeBase, domain, query);
 
             record ScoredContent(Content content, double score) {}
             final List<ScoredContent> scored = new ArrayList<>(n);
 
             for (int i = 0; i < n; i++) {
                 Content c = snapshot.get(i);
-                String text = String.valueOf(c);
-                double score = cosineSimilarity(queryVector, docEmbeddings.get(i).vector());
-// 주어/범용 휴리스틱
-                // 주어/범용 휴리스틱
-                String subjectGuess = guessSubjectFromQuery(query);
-                boolean hasSubject = !subjectGuess.isBlank()
-                        && text.toLowerCase().contains(subjectGuess.toLowerCase());
+                String text = segments.get(i).text(); // 위에서 만든 segments 기준으로 텍스트 사용
+                double sim = cosineSimilarity(qv, docEmbeddings.get(i).vector());
+
                 boolean isGeneric = genericClassifier.isGenericText(text);
+                boolean hasSubject = !subject.isBlank() && text.toLowerCase().contains(subject.toLowerCase());
+
                 // 원소 정책 가중
                 double deltaElem = elemScorer.deltaForText(text, policy.allowed(), policy.discouraged());
-                // 파트너(문서 내 등장 개체 중 subject 제외 1개) 추출 후 적응형 보너스
-                String partner = knowledgeBase.findFirstMentionedEntityExcluding(domain, text, subject).orElse("");
-                double synergyBonus = adaptiveScorer.getSynergyScore(domain, subject, partner); // [-0.05, 0.10] 범위
-                double adj = score
-                        + (hasSubject ? 0.15 : -0.20)
-                        +  (isGeneric ? -0.25 : 0.0)
-                        +  deltaElem
-                        +   synergyBonus;
-                scored.add(new ScoredContent(c, adj));
 
+                // 파트너 추출 → 적응형 궁합 보너스
+                String partner = knowledgeBase.findFirstMentionedEntityExcluding(domain, text, subject).orElse("");
+                double synergyBonus = adaptiveScorer.getSynergyScore(domain, subject, partner); // [-0.05, +0.10]
+
+                double score = sim
+                        + (hasSubject ? 0.15 : -0.20)
+                        + (isGeneric ? -0.25 : 0.0)
+                        + deltaElem
+                        + synergyBonus;
+
+                scored.add(new ScoredContent(c, score));
             }
 
-
-
-            long tSort0 = System.nanoTime();
+            long ts = System.nanoTime();
             scored.sort(Comparator.comparingDouble(ScoredContent::score).reversed());
-            long tSortMs = (System.nanoTime() - tSort0) / 1_000_000L;
+            long tSortMs = (System.nanoTime() - ts) / 1_000_000L;
 
             if (log.isDebugEnabled()) {
                 log.debug("[Rerank] embedAll.count={} embed.ms={} sort.ms={} topN/total={}/{}",
                         n, tEmbedMs, tSortMs, k, n);
             }
 
-            // 상위 k개만 반환
             return scored.stream()
                     .limit(k)
                     .map(ScoredContent::content)
@@ -135,32 +125,18 @@ public class EmbeddingModelCrossEncoderReranker implements CrossEncoderReranker 
             return new ArrayList<>(candidates.subList(0, k));
         }
     }
-    // 매우 단순한 주어 추정(따옴표/한글 고유명-like 토큰 우선)
-    private static String guessSubjectFromQuery(String q) {
-        if (q == null) return "";
-        var m = java.util.regex.Pattern.compile("\"([^\"]{2,})\"").matcher(q);
-        if (m.find()) return m.group(1);
-        String[] toks = q.split("\\s+");
-        for (String t : toks) {
-            if (t.length() >= 2) return t;
-        }
-        return "";
-    }
-    private double cosineSimilarity(float[] v1, float[] v2) {
+
+    private static double cosineSimilarity(float[] v1, float[] v2) {
         if (v1 == null || v2 == null || v1.length != v2.length || v1.length == 0) {
             return 0.0;
         }
-
-        double dotProduct = 0.0;
-        double normA = 0.0;
-        double normB = 0.0;
+        double dot = 0.0, na = 0.0, nb = 0.0;
         for (int i = 0; i < v1.length; i++) {
-            dotProduct += v1[i] * v2[i];
-            normA += v1[i] * v1[i];
-            normB += v2[i] * v2[i];
+            dot += v1[i] * v2[i];
+            na  += v1[i] * v1[i];
+            nb  += v2[i] * v2[i];
         }
-
-        double denominator = Math.sqrt(normA) * Math.sqrt(normB);
-        return (denominator == 0) ? 0.0 : dotProduct / denominator;
+        double den = Math.sqrt(na) * Math.sqrt(nb);
+        return den == 0 ? 0.0 : dot / den;
     }
 }
